# mats-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testmain.cpp
source/: piece_table.cpp  piece_table.h
src/: .gitignore  CMakeLists.txt
src/myapp/: CMakeLists.txt
src/myapp/src/: main.cpp
src/piece_table/: CMakeLists.txt
src/piece_table/include/piece_table/: file_piece_table.h  large_file_piece_table.h  piece_table.h  piece_table_exception.h  pt_types.h
src/piece_table/include/piece_table/impl/: piece_table_impl.h
src/piece_table/src/: file_piece_table.cpp  large_file_piece_table.cpp  piece_table.cpp  piece_table_impl.cpp
src/piece_table/test/: testmain.cpp  testrows.cpp
src/winapp/: CMakeLists.txt
src/winapp/src/: main.cpp
